--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇨🇦 加拿大-314.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-507.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-731.5KB/s(Youtube:不良林), server: 38.114.114.69, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-150.1KB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-735.0KB/s(Youtube:不良林), server: 38.114.114.69, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-669.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-451.5KB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 波兰-303.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-617.5KB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-223.0KB/s(Youtube:不良林), server: 38.143.66.55, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-974.4KB/s(Youtube:不良林), server: 38.114.114.49, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 波兰-207.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 波兰-470.4KB/s(Youtube:不良林), server: 217.30.10.65, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 波兰-263.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 波兰-714.7KB/s(Youtube:不良林), server: 217.30.10.65, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 波兰-247.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-592.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-735.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.5KB/s(Youtube:不良林)
-      - 波兰-303.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-617.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-974.4KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 波兰-470.4KB/s(Youtube:不良林)
+      - 波兰-263.1KB/s(Youtube:不良林)
+      - 波兰-714.7KB/s(Youtube:不良林)
+      - 波兰-247.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
