--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇨🇦 加拿大-314.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-507.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-731.5KB/s(Youtube:不良林), server: 38.114.114.69, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-150.1KB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 波兰-207.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 波兰-470.4KB/s(Youtube:不良林), server: 217.30.10.65, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 波兰-263.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 波兰-714.7KB/s(Youtube:不良林), server: 217.30.10.65, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 波兰-247.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-990.0KB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-636.8KB/s(Youtube:不良林), server: 38.75.136.21, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-399.2KB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-487.3KB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.69, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-336.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-356.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-731.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-150.1KB/s(Youtube:不良林)
-      - 波兰-207.1KB/s(Youtube:不良林)
-      - 波兰-470.4KB/s(Youtube:不良林)
-      - 波兰-263.1KB/s(Youtube:不良林)
-      - 波兰-714.7KB/s(Youtube:不良林)
-      - 波兰-247.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
