--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-990.0KB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-636.8KB/s(Youtube:不良林), server: 38.75.136.21, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-207.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇯🇵 日本-874.8KB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-208.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-561.0KB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-399.2KB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-487.3KB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.69, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-587.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-336.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-990.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-636.8KB/s(Youtube:不良林)
+      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-487.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
 rules:
