--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-207.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇺🇸 美国-883.8KB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-874.8KB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-208.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-561.0KB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-399.2KB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-587.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-336.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-593.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林), server: 213.183.53.179, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 保加利亚-404.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-842.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-207.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-874.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-587.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 保加利亚-404.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
