--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 未知国家-3.62MB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-788.4KB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-940.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.96MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-264.9KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-338.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 未知国家-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-788.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-940.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-264.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
